static/css/pages/whitepaper.css
.whitepaper-hero {
  height: 500px;
  padding-top: 105px;

  background-image: url('/static/img/whitepaper/sharing-economy-graphic.png');
  background-position: 100% 100%;
  background-repeat: no-repeat;
  background-size: 632px 368px;
  background-position: 100% 100%;
}

.whitepaper-hero .container, 
.whitepaper-hero .container > .row, 
.whitepaper-hero .container > .row > div {
  height: 100%;
}

.whitepaper-hero h1.title {
  text-align: left;
  max-width: 475px;
}

.whitepaper-hero h1.title > span {
  font-weight: 500;
  display: block;
}

.whitepaper-sidebar-nav {
  position: -webkit-sticky;
	position: sticky;
  top: 0;

  overflow: scroll;

  padding: 80px 0;
}

.whitepaper-sidebar-nav a {
  display: block;
  color: #638298;
  padding: 10px 0 0 28px;
  font-size: 0.75rem;
  width: 100%;
}

.whitepaper-sidebar-nav a.active {
  color: #061d2a;
  font-weight: 500;
}

a.whitepaper-nav-title {
  font-weight: bold;
  padding-left: 0;
}

.whitepaper-sidebar-nav a.active.whitepaper-nav-title {
  font-weight: bold;
}

.whitepaper-nav-title .content-index {
  width: 24px;
  display: inline-block;
}

main section.whitepaper-container h1, main section.whitepaper-container h2 {
  text-align: left;
  font-weight: bold;
}

.whitepaper-content {
  position: relative;
}

.whitepaper-content p {
  margin-bottom: 1rem;
}

.whitepaper-content h2 {
  text-transform: uppercase;
  font-size: 1.25rem;
}

.whitepaper-content h2 span {
  color: #1a82ff;
}

.whitepaper-content .whitepaper-image {
  width: 100%;
  margin: 2rem 0;
}

.whitepaper-team-logo {
  height: 25px;
  margin: 1rem 1rem;
}

.whitepaper-brand-logo-container {
  max-width: 500px;
  margin: 2rem auto;
}

.whitepaper-brand-logo {
  height: 25px;
  flex: 1;
  object-fit: contain;
  margin: 1rem;
}

.whitepaper-content blockquote {
  background-color: #ebeff3;
  padding: 1.5rem;

  border-left: 5px solid #1a82ff;
}

.whitepaper-content blockquote .content {
  margin: 0;
  font-style: italic;
}

.whitepaper-content blockquote .author {
  margin-top: 1rem;
  text-align: right;
}

.whitepaper-footnote-link {
  vertical-align: super;
  font-size: 50%;
  color: #000000;
}

.whitepaper-footnotes {
  color: #638298;
  font-size: 0.75rem;
  margin-bottom: 3rem;
  counter-reset: footnotes;
}

.whitepaper-footnotes > div {
  margin-bottom: 1rem;
}

.whitepaper-footnotes > div:before {
  counter-increment: footnotes;
  content: counter(footnotes);
  font-size: 50%;
  vertical-align: super;
}

